[project]
name = "langchainbasic"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.6.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "matplotlib>=3.11.0",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.3",
]
